objects/vlocity_ins__ProviderFeeScheduleEntry__c.object
<CustomObject>
    <description>Represents a provider&apos;s negotiated fee rate for a specific service code. Master-detail child object of the Provider Fee Schedule.</description>
    <fields>
        <fullName>vlocity_ins__AdditionalFeeAmount__c</fullName>
        <description>If Fee Type is Additional Amount, this field will hold the additional fee amount value. The Provider Fee for this entry will be calculated by adding this amount to the fee from the Base Fee Schedule for the same code.</description>
        <label>Additional Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CodeShortDescription__c</fullName>
        <formula>vlocity_ins__VlocityCodeId__r.vlocity_ins__ShortDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FeeType__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rate Factor</fullName>
                </value>
                <value>
                    <fullName>Fixed Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NegotiatedAmount__c</fullName>
        <label>Negotiated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderFeeScheduleId__c</fullName>
        <label>Provider Fee Schedule</label>
        <referenceTo>vlocity_ins__ProviderFeeSchedule__c</referenceTo>
        <relationshipLabel>Provider Fee Schedule Entries</relationshipLabel>
        <relationshipName>ProviderFeeScheduleEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RateFactor__c</fullName>
        <description>If Fee Type is Rate Factor, this field will hold the factor as a percentage value. The Provider Fee for this entry will be calculated by multiplying the fee from the Base Fee Schedule for the same code, by this factor.</description>
        <label>Rate Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ServiceLocationAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ProviderLocation</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Fee Schedule Entries</relationshipLabel>
        <relationshipName>ProviderFeeScheduleEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Code</label>
        <referenceTo>vlocity_ins__VlocityCode__c</referenceTo>
        <relationshipLabel>Provider Fee Schedule Entries</relationshipLabel>
        <relationshipName>ProviderFeeScheduleEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Provider Fee Schedule Entry</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Fee Schedule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>